Tab -> Icons inside tabItem is not showing correctly

--- a/src/scss/daisyui/components/_icon.scss
+++ b/src/scss/daisyui/components/_icon.scss
@@ -29,6 +29,7 @@ $icon-sizes: (
 
 	* {
 		stroke-width: 1.5px;
+		display: initial;
 	}
 }
 
